@startuml
class dominio.clima.AccuWeatherAPI {
+ List<Map<String,Object>> getWeather(String)
}
class dominio.clima.AccuWeather {
- Long periodoDeActualizacion
+ EstadoDelClima obtenerCondicionesClimaticas(String ciudad)
- void validarUltimaConsulta(String ciudad)
}
class dominio.clima.EstadoDelClima {
- BigDecimal temperatura
- BigDecimal humedad
}
class dominio.clima.RepositorioClima {
- Map<String, Object> condicionesClimaticas
+ EstadoDelClima getCondicionClimatica(String ciudad)
+ void setCondicionesClimaticas(String ciudad, LocalDateTime ultimaActualizacion, List<EstadoDelClima> condicionesClimaticas)
+ Boolean climaEstaDesactualizado(String ciudad, Long periodoDeActualizacion)
}
class dominio.usuario.Guardarropa {
+ List<Atuendo> generarSugerencias()
}
class dominio.usuario.AsesorDeImagen {
+ Atuendo sugerirAtuendo(String ciudad, Guardarropa guardarropa)
}
interface dominio.clima.ServicioMeteorologico {
~ EstadoDelClima obtenerCondicionesClimaticas(String ciudad)
}
class dominio.ropa.Prenda {
- TipoPrenda tipo
- TipoMaterial tipoMaterial
- Trama trama
- Color colorPrincipal
- Color colorSecundario
- Integer temperaturaMaximaDeUso
+ Boolean esAdecuadaPara(Integer temperaturaActual)
}
class dominio.ropa.Atuendo {
+ Boolean esAdecuadoPara(BigDecimal temperaturaActual)
}

dominio.ropa.Prenda <-left- dominio.ropa.Atuendo :prendaSuperior
dominio.ropa.Prenda <-left- dominio.ropa.Atuendo :prendaInferior
dominio.ropa.Prenda <-left- dominio.ropa.Atuendo :calzado
dominio.ropa.Prenda <-left- dominio.ropa.Atuendo :accesorio

dominio.ropa.Prenda "*" <-right- dominio.usuario.Guardarropa :prendasSuperiores
dominio.ropa.Prenda "*" <-- dominio.usuario.Guardarropa :prendasInferiores
dominio.ropa.Prenda "*" <-- dominio.usuario.Guardarropa :calzados
dominio.ropa.Prenda "*" <-- dominio.usuario.Guardarropa :accesorios

dominio.clima.ServicioMeteorologico <-up- dominio.usuario.AsesorDeImagen: servicioMeteorologico
dominio.usuario.Guardarropa <.right. dominio.usuario.AsesorDeImagen

dominio.clima.AccuWeatherAPI <-right- dominio.clima.AccuWeather : apiClima
dominio.clima.ServicioMeteorologico <|.down. dominio.clima.AccuWeather

dominio.clima.EstadoDelClima <.right. dominio.clima.ServicioMeteorologico
dominio.clima.RepositorioClima <-right- dominio.clima.ServicioMeteorologico : repositorioClima

@enduml